[tool.poetry]
name = "hotfix"
version = "0.1.0"
description = "Automate hot fixes at propelo"
authors = ["Sid Bidasaria <sid@propelo.ai>"]
readme = "README.md"


[tool.poetry.scripts]
hf = "hotfix.hf:app"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
typer = {extras = ["all"], version = "^0.6.1"}
in-place = "^0.5.0"
GitPython = "^3.1.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = {extras = ["d"], version = "^22.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
